cmake_minimum_required(VERSION 3.23)
project(Algorithm_I)

set(CMAKE_CXX_STANDARD 17)

add_executable(Algorithm_I main.cpp "Day 1/BinarySearch.h" "Day 1/FirstBadVersion.h" "Day 1/SearchInsertPosition.h" "Day 2/SquaresOfaSortedArray.h" "Day 2/RotateArray.h" "Day 3/MoveZeroes.h" "Day 4/ReverseString.h" "Day 4/ReverseWordsInAStringIII.h" "Day 3/TwoSumII.h" "Day 5/MiddleOfTheLinkedList.h" "Day 5/RemoveNthNodeLL.h")
